// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MeterReadingRow snapshots > pending (unverified) reading row renders correctly 1`] = `
<table>
  <tbody>
    <tr
      class="transition-colors hover:bg-gray-50 dark:hover:bg-gray-800/40"
    >
      <td
        class="px-4 py-3 font-mono text-xs text-gray-700 dark:text-gray-300"
      >
        meter-abc-123
      </td>
      <td
        class="px-4 py-3 text-gray-900 dark:text-gray-100"
      >
        12.5
      </td>
      <td
        class="px-4 py-3 text-gray-600 dark:text-gray-400"
      >
        1/15/2024, 10:30:00 AM
      </td>
      <td
        class="px-4 py-3"
      >
        <span
          class="inline-flex items-center rounded-full px-2 py-0.5 text-xs font-medium bg-yellow-100 text-yellow-700 dark:bg-yellow-900/30 dark:text-yellow-400"
        >
          Pending
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`MeterReadingRow snapshots > verified reading row renders correctly 1`] = `
<table>
  <tbody>
    <tr
      class="transition-colors hover:bg-gray-50 dark:hover:bg-gray-800/40"
    >
      <td
        class="px-4 py-3 font-mono text-xs text-gray-700 dark:text-gray-300"
      >
        meter-abc-123
      </td>
      <td
        class="px-4 py-3 text-gray-900 dark:text-gray-100"
      >
        12.5
      </td>
      <td
        class="px-4 py-3 text-gray-600 dark:text-gray-400"
      >
        1/15/2024, 10:30:00 AM
      </td>
      <td
        class="px-4 py-3"
      >
        <span
          class="inline-flex items-center rounded-full px-2 py-0.5 text-xs font-medium bg-green-100 text-green-700 dark:bg-green-900/30 dark:text-green-400"
        >
          Verified
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Skeleton components snapshots > ChartSkeleton renders correctly (no title) 1`] = `
<div
  aria-busy="true"
  aria-label="Loading chart"
  class="rounded-xl border border-gray-200 bg-white p-6 dark:border-gray-800 dark:bg-gray-900"
>
  <div
    aria-hidden="true"
    class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-48 w-full"
  />
</div>
`;

exports[`Skeleton components snapshots > ChartSkeleton renders correctly (with title) 1`] = `
<div
  aria-busy="true"
  aria-label="Loading Daily energy output chart"
  class="rounded-xl border border-gray-200 bg-white p-6 dark:border-gray-800 dark:bg-gray-900"
>
  <div
    aria-hidden="true"
    class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 mb-4 h-5 w-40"
  />
  <div
    aria-hidden="true"
    class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-48 w-full"
  />
</div>
`;

exports[`Skeleton components snapshots > SectionSkeleton renders correctly (2 rows) 1`] = `
<div
  aria-busy="true"
  aria-label="Loading section"
  class="rounded-xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-gray-900"
>
  <div
    aria-hidden="true"
    class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 mb-3 h-3 w-20"
  />
  <div
    class="space-y-3"
  >
    <div
      class="flex items-center justify-between gap-4"
    >
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-20"
      />
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-32"
      />
    </div>
    <div
      class="flex items-center justify-between gap-4"
    >
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-20"
      />
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-32"
      />
    </div>
  </div>
</div>
`;

exports[`Skeleton components snapshots > SectionSkeleton renders correctly (default 4 rows) 1`] = `
<div
  aria-busy="true"
  aria-label="Loading section"
  class="rounded-xl border border-gray-200 bg-white p-5 dark:border-gray-800 dark:bg-gray-900"
>
  <div
    aria-hidden="true"
    class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 mb-3 h-3 w-20"
  />
  <div
    class="space-y-3"
  >
    <div
      class="flex items-center justify-between gap-4"
    >
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-20"
      />
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-32"
      />
    </div>
    <div
      class="flex items-center justify-between gap-4"
    >
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-20"
      />
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-32"
      />
    </div>
    <div
      class="flex items-center justify-between gap-4"
    >
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-20"
      />
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-32"
      />
    </div>
    <div
      class="flex items-center justify-between gap-4"
    >
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-20"
      />
      <div
        aria-hidden="true"
        class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-32"
      />
    </div>
  </div>
</div>
`;

exports[`Skeleton components snapshots > Skeleton renders correctly 1`] = `
<div
  aria-hidden="true"
  class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700"
/>
`;

exports[`Skeleton components snapshots > Skeleton with custom className renders correctly 1`] = `
<div
  aria-hidden="true"
  class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-24"
/>
`;

exports[`Skeleton components snapshots > StatCardSkeleton renders correctly 1`] = `
<div
  aria-busy="true"
  aria-label="Loading statistic"
  class="rounded-xl border border-gray-200 bg-white p-6 dark:border-gray-800 dark:bg-gray-900"
>
  <div
    aria-hidden="true"
    class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 mb-2 h-4 w-24"
  />
  <div
    aria-hidden="true"
    class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-8 w-16"
  />
</div>
`;

exports[`Skeleton components snapshots > TableRowSkeleton renders correctly (2 cols) 1`] = `
<table>
  <tbody>
    <tr
      aria-hidden="true"
    >
      <td
        class="px-4 py-3"
      >
        <div
          aria-hidden="true"
          class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-full"
        />
      </td>
      <td
        class="px-4 py-3"
      >
        <div
          aria-hidden="true"
          class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-full"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Skeleton components snapshots > TableRowSkeleton renders correctly (default 4 cols) 1`] = `
<table>
  <tbody>
    <tr
      aria-hidden="true"
    >
      <td
        class="px-4 py-3"
      >
        <div
          aria-hidden="true"
          class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-full"
        />
      </td>
      <td
        class="px-4 py-3"
      >
        <div
          aria-hidden="true"
          class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-full"
        />
      </td>
      <td
        class="px-4 py-3"
      >
        <div
          aria-hidden="true"
          class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-full"
        />
      </td>
      <td
        class="px-4 py-3"
      >
        <div
          aria-hidden="true"
          class="animate-pulse rounded-md bg-gray-200 dark:bg-gray-700 h-4 w-full"
        />
      </td>
    </tr>
  </tbody>
</table>
`;
